--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
+    "startdev": "nodemon server.js",
     "buildclient": "browserify public/js/main.js > public/dist.js",
     "postinstall": "npm run buildclient"
   },
